# todoapi-python

./: README.md  database.sql  main.py  pyproject.toml  requirements.txt
config/: database.py  settings.py
database/: connection.py
models/: todo.py  user.py
routes/: todo_routes.py  user_routes.py
utils/: auth.py  email.py
